--- a/_posts/Java/JavaSE/2020-11-12-IO流.md
+++ b/_posts/Java/JavaSE/2020-11-12-IO流.md
@@ -545,9 +545,11 @@ public class JustTest {
 
 1. 写出字符：调用`write(int b)`方法，每次可写出一个字符数据（至内存缓冲区，是字符转换为字节的过程）。
 
-   > 关于关闭和**刷新**：关闭一个输出流的同时，也会冲刷用于该输出流的缓冲区：所有被临时置于缓冲区中，以使用更大的包的形式传递的**字符**在关闭输出流时都将被送出。特别地，如果不关闭文件，那么写出字节的最后一个包可能将永远得不到传递。
+   > 关于关闭和**刷新**：关闭一个输出流的同时，也会冲刷用于该输出流的缓冲区：所有被临时置于缓冲区中，以使用更大的包的形式传递的**字符**在关闭输出流时都将被送出。
 
-   如果既想写出数据，又想继续使用流，则需要`flush`方法。
+   当数据不足以填充缓冲区，而又需要往客户端传数据，为了解决这个问题，便有了 `flush` 的概念，将缓冲区的数据“强迫发送”。
+
+   此外，如果既想写出数据，又想继续使用流，也需要`flush`方法。
 
    + `flush`：刷新缓冲区，但流对象仍可继续使用。
    + `close`：先刷新缓冲区，然后通知系统释放资源，此时流对象不可再被使用。
@@ -833,6 +835,7 @@ public class JustTest {
         String myline = null;
         while((myline = br.readLine()) != null){
             String[] twoStrs = myline.split("\\."); //将一行文字以.作为分隔符，分隔为两个字符串。
+            /* split的工作原理是利用正则表表达式,而在正则表达式中, "."有特殊意思,所以匹配"."时要用转义字符"\",所以在正则表达式中匹配"."的表达式是"\.", 而在Java中,\又是特殊字符, 所以还要进行转义, 所以最终变成"\\." */
             lineMap.put(twoStrs[0], twoStrs[1]);
         }
         br.close();
