--- a/_posts/Java/JavaSE/2020-11-21-网络.md
+++ b/_posts/Java/JavaSE/2020-11-21-网络.md
@@ -168,19 +168,19 @@ TCP通信步骤：
 public class ServerTCP {
     public static void main(String[] args) throws IOException {
         System.out.println("服务端启动，等待连接中....");
-        ServerSocket ss = new ServerSocket(6666); //创建ServerSocket对象，绑定端口，开始等待连接
-        Socket server = ss.accept(); //调用accept方法，以获取发送请求的客户端Socket
-        InputStream is = server.getInputStream(); //通过Socket对象获取输入流，读入客户端发送的数据
-
+        ServerSocket ss = new ServerSocket(6666); //1.创建ServerSocket对象，绑定端口，开始等待连接
+        Socket server = ss.accept(); //2.调用accept方法，以获取发送请求的客户端Socket
+        InputStream is = server.getInputStream(); //3.通过Socket对象获取输入流，读入客户端发送的数据
+		//4.一次性读入数据
         byte[] arr = new byte[1024];
         int len = is.read(arr); //读入至字节数组中
         String msg = new String(arr, 0, len); //解析数组，打印字符串信息
-        System.out.println(msg);
+        System.out.println(msg); //打印字符串信息，供测试
 
         /* ---------------回写数据--------------- */
-        OutputStream os = server.getOutputStream(); //获取Socket获取输出流
-        os.write("Hey man, I am good!".getBytes()); //回写数据至客户端
-
+        OutputStream os = server.getOutputStream(); //5.通过Socket获取输出流
+        os.write("Hey man, I am good!".getBytes()); //6.回写数据至客户端
+		
         os.close();
         is.close();
         server.close();
@@ -194,15 +194,16 @@ public class ServerTCP {
 public class ClientTCP {
     public static void main(String[] args) throws IOException {
         System.out.println("客户端发送数据！");
-        Socket client = new Socket("localhost", 6666); //确定连接至哪个服务端
-        OutputStream os = client.getOutputStream(); //获取输出流对象
-        os.write("How do you do, TCP? I am coming!".getBytes()); //写出数据至服务端
+        Socket client = new Socket("localhost", 6666); //1.确定连接至哪个服务端
+        OutputStream os = client.getOutputStream(); //2.获取输出流对象
+        os.write("How do you do, TCP? I am coming!".getBytes()); //3.写出数据至服务端
 
         /* ---------------解析回写--------------- */
-        InputStream in = client.getInputStream(); //获取输入流对象
+        InputStream in = client.getInputStream(); //4.获取输入流对象
+        //5.读入回写的数据
         byte[] arr = new byte[100];
         int len = in.read(arr);
-        System.out.println(new String(arr, 0, len)); //读取服务端的数据
+        System.out.println(new String(arr, 0, len)); //打印服务端回写的数据
 
         in.close();
         os.close();
@@ -211,7 +212,7 @@ public class ClientTCP {
 }
 ```
 
-启动时，应该先运行服务端，再运行客户端，顺序颠倒会导致抛出异常
+启动时，应该先运行服务端，再运行客户端（手速要快），顺序颠倒会导致抛出异常
 
 `ServerTCP`运行结果：
 
@@ -220,3 +221,288 @@ public class ClientTCP {
 `ClientTCP`运行结果：
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201121222905.png" width = "400"/>
+
+## 14.3 综合案例
+
+### 14.3.1 文件上传
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210125104522.png"/>
+
+> ①【客户端】输入流，从本地硬盘读入文件数据到程序中；
+>
+> ②【客户端】输出流，写出文件数据到服务端；
+>
+> ③【服务端】输入流，读入文件数据到服务端程序；
+>
+> ④【服务端】输出流，写出文件数据到服务器硬盘中。
+
+一、初步实现
+
+服务端*初步*代码实现：
+
+```java
+import java.io.*;
+import java.net.ServerSocket;
+import java.net.Socket;
+
+public class FileUpload_Server {
+    public static void main(String[] args) throws IOException {
+        System.out.println("服务器已经启动....");
+        ServerSocket serverSocket = new ServerSocket(8888); //1.创建服务端ServerSocket
+        Socket apt = serverSocket.accept(); //2.建立连接
+        //3.创建流对象
+        BufferedInputStream bis = new BufferedInputStream(apt.getInputStream()); //获取输入流，读入文件数据
+        File file = new File("D:\\uploadbyJava");
+        //假定D盘即为服务器硬盘
+        if(!file.exists()) file.mkdir(); //不存在该文件夹则创建它
+        BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream(file + "\\copy.jpg"));//创建输出流，写出到服务器本地
+        //4.读写数据
+        byte[] b = new byte[1024 * 8];
+        int len = 0;
+        while((len = bis.read(b)) != -1){
+            bos.write(b, 0, len);
+        }
+        //5.关闭资源
+        bos.close();
+        bis.close();
+        apt.close();
+        System.out.println("上传的文件已经保存！");
+    }
+}
+```
+
+客户端*初步*代码实现：
+
+```java
+import java.io.*;
+import java.net.Socket;
+
+public class FileUpload_Client {
+    public static void main(String[] args) throws IOException {
+        //1.创建流对象
+        BufferedInputStream bis = new BufferedInputStream(new FileInputStream("E:\\wall.jpg"));//1.1 创建输入流，读入本地硬盘的文件
+        Socket socket = new Socket("127.0.0.1", 8888);
+        BufferedOutputStream bos = new BufferedOutputStream(socket.getOutputStream()); //创建输出流，写出到服务端
+        //2.读写数据
+        int len = 0;
+        byte[] b = new byte[1024 * 8];
+        while((len = bis.read(b)) != -1){
+            bos.write(b, 0, len);
+            bos.flush(); 
+            /* 注意！flush()在此处十分重要！它既能够保证将缓冲区刷新，又能够在下一轮循环中继续使用。*/            
+        }
+        System.out.println("文件发送完毕!");
+        //3.释放资源
+        bos.close();
+        socket.close();
+        bis.close();
+        System.out.println("文件上传完毕!");
+    }
+}
+```
+
+> 客户端知道自己的文件什么时候读取完毕，可以自己停止。如果不使用 `flush()` 或者是视频中 `shutdownOutput()`，服务器不能够接收到文件结束的标记，也即无法知道何时停止，会不断地等待着（死循环）接收客户端`read()`中的内容，进入**阻塞**状态。
+
+二、优化分析
+
+1. 关于文件名称写死的问题
+
+   为了在服务器硬盘中保存多个文件，不应将文件名称写死，如 `xxx.jpg`。可以使用系统时间+随机数来进行命名。
+
+   ```java
+   String fileName = System.currentTimeMillis() + new Random().nextInt(999999)+".jpg";//文件名称
+   FileOutputStream fis = new FileOutputStream(file + 
+   "\\" + fileName); // 文件路径
+   BufferedOutputStream bos = new BufferedOutputStream(fis);
+   ```
+
+2. 关于循环接收的问题
+
+   服务端如果只保存一个文件就关闭的话，用户无法再进行文件上传，不符合实际。可使用循环进行改进，使得服务器一直处于监听状态，不断地接收不同用户的文件（注意，它不同于上面所述的阻塞状态）
+
+   > 运行的时候，不需要手速了😂
+
+   ```java
+   while(true){ // 每次接收新的连接,创建一个Socket
+       Socket accept = serverSocket.accept();
+       ......
+   }
+   ```
+
+3. 关于效率的问题
+
+   服务端，在接收大文件时，可能耗费几秒钟的时间，此时不能接收其他用户上传，所以，使用多线程技术优化，代码如下：
+
+   ```java
+   while(true){
+       Socket apt = serverSocket.accept();
+       new Thread(() -> {
+           //socket对象交给子线程处理进行读写操作，Runnable接口中只有一个run方法，使用lambda表达式简化格式
+           InputStream bis = accept.getInputStream();
+           //...
+       })
+   }
+   ```
+
+三、代码优化+信息回写
+
+服务端代码：
+
+```java
+import java.io.*;
+import java.net.ServerSocket;
+import java.net.Socket;
+import java.util.Random;
+
+public class FileUpload_Server {
+    public static void main(String[] args) throws IOException {
+        File file = new File("D:\\uploadbyJava"); //假定D盘即为服务器硬盘，设置文件路径
+        if(!file.exists()) file.mkdir(); //不存在该文件夹则创建它
+        System.out.println("服务器已经启动....");
+        ServerSocket serverSocket = new ServerSocket(8888); //1.创建服务端ServerSocket
+		//2.循环接收，建立连接
+        while(true){
+            Socket apt = serverSocket.accept(); 
+            String fileName = System.currentTimeMillis() + new Random().nextInt(999999)+".jpg"; //文件名
+            /* 3.socket对象交给子线程处理,进行读写操作
+               Runnable接口中,只有一个run方法,使用lambda表达式简化格式
+            */
+            new Thread(() -> {
+                try(
+                        BufferedInputStream bis = new BufferedInputStream(apt.getInputStream());//获取输入流对象
+                        FileOutputStream fis = new FileOutputStream(file + "\\" + fileName); // 创建输出流对象，用于写出至服务器本地
+                        BufferedOutputStream bos = new BufferedOutputStream(fis);
+                ){ //读写数据
+                    byte[] b = new byte[1024 * 8];
+                    int len = 0;
+                    while((len = bis.read(b)) != -1){
+                        bos.write(b, 0, len);
+                    }
+					/* 4.信息回写 */
+                    System.out.println("back....");
+                    OutputStream out = apt.getOutputStream();
+                    out.write("文件上传成功至服务器!".getBytes());
+                    out.close();
+					//关闭资源
+                    apt.close();
+                    System.out.println("上传的文件已经保存!");
+                } catch (IOException e){
+                    e.printStackTrace();
+                }
+            }).start(); //别忘记运行进程
+        }
+    }
+}
+```
+
+客户端代码：
+
+```java
+import java.io.*;
+import java.net.Socket;
+
+public class FileUpload_Client {
+    public static void main(String[] args) throws IOException {
+        //1.创建流对象
+        BufferedInputStream bis = new BufferedInputStream(new FileInputStream("E:\\wall.jpg"));//创建输入流，读入本地硬盘的文件
+        Socket socket = new Socket("127.0.0.1", 8888);
+        BufferedOutputStream bos = new BufferedOutputStream(socket.getOutputStream()); //创建输出流，写出到服务端
+        //2.读写数据
+        int len = 0;
+        byte[] b = new byte[1024 * 8];
+        while((len = bis.read(b)) != -1){
+            bos.write(b, 0, len);
+            //bos.flush();
+        }
+        socket.shutdownOutput(); //关闭输出流，通知服务端，写出数据完毕
+        System.out.println("文件发送完毕!");
+		/* 3. 解析回写 */
+        InputStream in = socket.getInputStream();
+        byte[] back = new byte[20];
+        in.read(back);
+        System.out.println(new String(back));
+        // 4. 释放资源
+        in.close();
+        socket.close();
+        bis.close();
+    }
+}
+```
+
+运行结果：
+
+| 服务端运行窗口                                               | 客户端运行窗口                                               | 实际运行结果                                                 |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210125164753.png"/> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210125164849.png"/> | ![image-20210125164904495](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210125164904495.png) |
+
+### 14.3.2 模拟B/S服务器
+
+模拟网站服务器，使用浏览器来访问自己编写的服务端程序，查看网页效果。
+
+要点：
+
+1. 我们可以将页面数据放置到某个web文件夹中，服务器端程序启动时，在浏览器中输入地址：`localhost:端口号/页面数据文件路径`，如下图：
+
+   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210125180648.png"/>
+
+2. 服务器程序中字节输入流可读入浏览器发来的请求信息，类似于下图：
+
+   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/读取访问信息.jpg"/>
+
+   其中，第一行为浏览器的请求信息，而 `/web/index.html` 正是浏览器想要请求的服务器端的资源，需要用**字符串进行切割**获取
+
+3. 浏览器在得到响应信息后，便在页面进行数据的展示。
+
+4. 浏览器遇到图片时，会开启一个线程进行单独的访问，因而需要在服务器端使用线程技术。
+
+```java
+public class BS_ServerDemo {
+    public static void main(String[] args) throws IOException {
+        System.out.println("服务端启动，等待连接中....");
+        ServerSocket server = new ServerSocket(8888);
+        while(true){
+            Socket socket = server.accept();
+            new Thread(new Web(socket)).start(); //Web作为target，Thread对象才是真正的线程对象，需要调用start启动线程
+        }
+    }
+    static class Web implements Runnable{ //实现Runnable接口，以创建线程
+        private Socket socket;
+        public Web(Socket socket){
+            this.socket = socket;
+        }
+        public void run(){ //定义Runnable接口的实现类，需要覆写该接口的run方法
+            try{
+                BufferedReader readWb = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+                //转换流读入浏览器请求的信息，类似于"GET, /basic-codes/NewModule/web/index.html, HTTP/1.1"
+                String reqst = readWb.readLine();
+                String[] arr = reqst.split(" "); //以空格字符作为分隔符，将上面的信息切割，我要取出其中的请求资源的路径
+                System.out.println(Arrays.toString(arr));
+                String realpath = arr[1].substring(1); //因为arr[1]="/basic-codes/NewModule/web/index.html"有多余的‘/’字符
+                System.out.println(realpath);
+
+                FileInputStream fis = new FileInputStream(realpath);
+                System.out.println(fis);
+                byte[] b= new byte[1024];
+                int len = 0;
+                OutputStream out = socket.getOutputStream();
+                //字节输出流，接下来三行是固定的，将HTTP协议响应头写出给客户端
+                out.write("HTTP/1.1 200 OK\r\n".getBytes());
+                out.write("Content-Type:text/html\r\n".getBytes());
+                out.write("\r\n".getBytes()); // 必须要写入空行,否则浏览器不解析
+                while((len = fis.read(b)) != -1){ //读入（客户端所请求的）资源文件
+                    out.write(b, 0, len);
+                }
+                fis.close();
+                out.close();
+                readWb.close();
+                socket.close();
+            } catch (IOException e){
+                e.printStackTrace();
+            }
+        }
+    }
+}
+```
+
+
+
