--- a/_posts/OnlineJudge/LeetCode/2020-08-25-LeetCode周赛203题解.md
+++ b/_posts/OnlineJudge/LeetCode/2020-08-25-LeetCode周赛203题解.md
@@ -2,7 +2,7 @@
 title: Leetcode 周赛#203 题解
 author: JoyDee
 categories: [Online Judge, LeetCode]
-tags: [算法-贪心, 思维-逆向思维, 算法-记忆化搜索, 算法-二分思想, STL]
+tags: [算法-贪心, 思维-思维, 算法-记忆化搜索, 算法-二分思想, STL]
 date: 2020-08-25 14:30:00 +0800
 math: true
 ---
