--- a/_posts/OnlineJudge/LeetCode/2020-09-21-LCCUP2020.md
+++ b/_posts/OnlineJudge/LeetCode/2020-09-21-LCCUP2020.md
@@ -2,7 +2,7 @@
 title: LCCUP 2020 秋季编程大赛 补题
 author: JoyDee
 categories: [Online Judge, LeetCode]
-tags: [算法-二分思想, 算法-线性DP, 算法-记忆化搜索, 算法-数学, 思维-逆向思维, 算法-深搜, 算法-宽搜]
+tags: [算法-二分思想, 算法-线性DP, 算法-记忆化搜索, 算法-数学, 思维-逆向, 算法-深搜, 算法-宽搜]
 date: 2020-09-21 16:52:00 +0800
 math: true
 ---
