--- a/_posts/OnlineJudge/LeetCode/2020-08-23-LeetCode双周赛33.md
+++ b/_posts/OnlineJudge/LeetCode/2020-08-23-LeetCode双周赛33.md
@@ -2,7 +2,7 @@
 title: Leetcode 双周赛#33 题解
 author: JoyDee
 categories: [Online Judge, LeetCode]
-tags: [算法-贪心, 思维-逆向思维, 算法-深搜]
+tags: [算法-贪心, 思维-逆向, 算法-深搜]
 date: 2020-08-23 16:06:00 +0800
 math: true
 ---
