--- a/_posts/OnlineJudge/LeetCode/2020-10-08-LeetCode周赛209.md
+++ b/_posts/OnlineJudge/LeetCode/2020-10-08-LeetCode周赛209.md
@@ -2,7 +2,7 @@
 title: Leetcode 周赛#209 题解
 author: JoyDee
 categories: [Online Judge, LeetCode]
-tags: [算法-广搜, 算法-树的遍历, 算法-极角, 算法-排序, 思维-双指针, 算法-记忆化搜索, 格雷码]
+tags: [算法-广搜, 算法-树的遍历, 算法-极角, 算法-排序思想, 思维-双指针, 算法-记忆化搜索, 格雷码]
 date: 2020-10-08 10:48:00 +0800
 math: true
 ---
