--- a/_posts/OnlineJudge/LeetCode/2020-11-02-LeetCode周赛213.md
+++ b/_posts/OnlineJudge/LeetCode/2020-11-02-LeetCode周赛213.md
@@ -2,7 +2,7 @@
 title: Leetcode 周赛#213 题解
 author: JoyDee
 categories: [Online Judge, LeetCode]
-tags: [算法-组合公式, 算法-暴力搜索, 算法-递归与分治, 算法-贪心]
+tags: [算法-组合公式, 算法-深搜, 算法-递归与分治, 算法-贪心]
 date: 2020-11-02 00:26:00 +0800
 math: true
 ---
