commit 3 posts on MySQL(1-3) & modify the Assembly tags

--- a/_posts/程序设计语言/Assembly/2020-12-26-汇编语言学习记录02之程序设计技巧.md
+++ b/_posts/程序设计语言/Assembly/2020-12-26-汇编语言学习记录02之程序设计技巧.md
@@ -1,8 +1,8 @@
 ---
 title: 「汇编学习记录02」之程序设计技巧
 author: JoyDee
-categories: [程序设计语言, 汇编语言]
-tags: [汇编语言]
+categories: [Programming Languages, Assembly Language]
+tags: [Assembly]
 math: true
 ---
 
