--- a/_posts/程序设计语言/Assembly/2020-11-14-汇编语言学习记录01丨开发工具安装及编译运行第一个程序.md
+++ b/_posts/程序设计语言/Assembly/2020-11-14-汇编语言学习记录01丨开发工具安装及编译运行第一个程序.md
@@ -1,8 +1,8 @@
 ---
 title: 「汇编学习记录01」开发工具安装及编译运行第一个程序
 author: JoyDee
-categories: [程序设计语言, 汇编语言]
-tags: [汇编语言]
+categories: [Programming Languages, Assembly Language]
+tags: [Assembly]
 ---
 
 
