--- a/_posts/程序设计语言/Assembly/2020-12-30-汇编语言学习记录03.md
+++ b/_posts/程序设计语言/Assembly/2020-12-30-汇编语言学习记录03.md
@@ -1,8 +1,8 @@
 ---
 title: 「汇编学习记录03」实验大作业-数值运算与数据输出
 author: JoyDee
-categories: [程序设计语言, 汇编语言]
-tags: [汇编语言]
+categories: [Programming Languages, Assembly Language]
+tags: [Assembly]
 math: true
 ---
 
