commit one post on MySQL bugs

--- a/_posts/数据库/2021-01-30-数据库完整性与设计.md
+++ b/_posts/数据库/2021-01-30-数据库完整性与设计.md
@@ -55,9 +55,9 @@ math: true
      ```
 
      <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210130225638.png" style="zoom:80%;" />
-     
+
   2. 在已有的表中添加主键
-  
+
      ```sql
      ALTER TABLE 表名 MODIFY 字段名 字段类型 PRIMARY KEY;
      ```
@@ -138,7 +138,7 @@ ALTER TABLE 表名 DROP PRIMARY KEY;
 
   ```sql
   CREATE TABLE st2(
-  	id INT,
+  	  id INT,
       name VARCHAR(20),
       address VARCHAR(20) DEFAULT `广州`
   );
@@ -166,7 +166,7 @@ ALTER TABLE 表名 DROP PRIMARY KEY;
 
   ```sql
   CREATE TABLE stu(
-  	id INT,
+  	  id INT,
       phone_number VARCHAR(20) UNIQUE
   );
   ```
@@ -246,16 +246,144 @@ ALTER TABLE 表名 DROP PRIMARY KEY;
 
 ```sql
 CREATE TABLE SC ( 
-	SNo CHAR(9), /* 学生成绩表的主属性*/
+	  SNo CHAR(9), /* 学生成绩表的主属性*/
     CNo CHAR(4), /* 学生表的主属性的外键 */
     Grade SMALLINT,
     PRIMARY KEY(SNo, CNo), /* 在表级定义实体完整性（设置联合主键）*/
     FOREIGN KEY (SNo) REFERENCES Student(SNo) /* 注意区别两个SNo*/
-			ON DELETE CASCADE /*当删除Student表中的元组时，级联删除SC中相应元组 */
+			      ON DELETE CASCADE /*当删除Student表中的元组时，级联删除SC中相应元组 */
             ON UPDATE CASCADE, /*当更新Student表中的SNo时，...*/
-	FOREIGN KEY (CNo) REFERENCES Course(CNo) 
-			ON DELETE CASCADE /*当删除Course表中的元组造成与SC表不一致时，拒绝删除*/
+	  FOREIGN KEY (CNo) REFERENCES Course(CNo) 
+			      ON DELETE CASCADE /*当删除Course表中的元组造成与SC表不一致时，拒绝删除*/
             ON UPDATE CASCADE /*当更新Course表中的CNo时，级联更新SC表中相应的元组*/
 );
 ```
+
+## 4.2 数据库的设计
+
+### 4.2.1 多表之间的关系
+
+| 分类   | 举例                                           | 实现方式                                                     |
+| ------ | ---------------------------------------------- | ------------------------------------------------------------ |
+| 一对一 | 一个人只有一个身份证，一个身份证只能对应一个人 | 可在任意一方添加唯一外键指向另一方的主键                     |
+| 一对多 | 一个部门有多个员工，一个员工只能对应一个部门   | 在多的一方建立外键，指向少的一方的主键                       |
+| 多对多 | 一个学生可选多门课程，一门课程可被多个学生选择 | 需借助第三张表，中间表至少包含两个字段（共同作为该表的外键），分别指向两张表的主键 |
+
+### 4.2.2 函数依赖与码
+
+#### 函数依赖
+
++ 函数依赖：若通过 $A$ 属性（属性组）的值，可唯一确定 $B$ 属性的值，则称 $B$ 依赖于 $A$ 。记作：$A\rightarrow B$
++ 完全函数依赖：若 $A$ 是一个属性组，则 $B$ 属性值的确定需要依赖于 $A$ 属性组中所有的属性值，则称 $B$ 完全依赖于$A$，记作：$X\stackrel{F}{\longrightarrow}Y$
++ 部分函数依赖：若 $A$ 是一个属性组，则 $B$ 属性值的确定只需要依赖于 $A$  属性组中某一些值即可，则称 $B$ 属性部分依赖于 $A$，记作：$X\stackrel{P}{\longrightarrow}Y$
++ 传递函数依赖：若通过 $A$ 属性（属性组）的值，可唯一确定 $B$ 属性（属性组）的值，再通过 $B$ 属性（属性组）的值可唯一确定 $C$ 属性的值，则称 $C$ 传递函数依赖于 $A$，记作：$X\stackrel{传递}{\longrightarrow}Y$
+
+#### 码
+
+设 $R(U)$ 是属性集 $U$ 上的关系模式，而 $K$ 为 $R<U, F>$ 中的属性或属性组合
+
++ 候选码：若 $U$ 完全依赖于 $K$，则 $K$ 为 $R$ 的候选码。
++ **主码（primary key）**：若候选码多于一个，则选定其中的一个为主码。
++ 主属性（primary attribute）：包含在任何一个候选码中的属性称为主属性。相反地，若不包含在任何候选码中的属性称为 非主属性 或 **非码属性（non-key attribute）**。
+
+### 4.2.3 范式与规范化的概念
+
+关系数据库中的关系是要满足一定要求的，满足不同程度要求的为不同范式。
+
+⭐一个 低一级 范式的关系模式 通过 **模式分解** 可以转换为若干个 高一级 范式的关系模式的集合，这种过程就叫 **规范化**。
+
+目前关系数据库有六种范式，而满足最低要求的范式是第一范式（1NF）。在第一范式的基础上进一步满足更多规范要求的称为第二范式（2NF），其余范式以次类推。一般说来，数据库只需满足第三范式(3NF）就行了。
+
+### 4.2.4 第一范式
+
+数据库表的每一列都是不可分割的原子数据项，不能是集合、数组等非原子数据项。即表中的某个列有多个值时，必须拆分为不同的列。简而言之，第一范式**每一列不可再拆分**，称为**原子性**。
+
+| 不符合1NF的例子                                              | 符合1NF的例子                                                |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210131174852.png" style="zoom: 67%;" /> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210131175041.png" style="zoom:67%;" /> |
+
+### 4.2.5 第二范式
+
+在满足第一范式的前提下，表中的每一个字段都完全依赖于主键（不能存在仅依赖主键一部分的列）。可以理解为“一张表只描述一件事情”。
+
+简而言之，第二范式就是在第一范式的基础上所有列**完全函数依赖**于主键列。
+
+> 当存在一个复合主键包含多个主键列的时候，有可能发生不符合第二范式的情况。
+
+| 不符合2NF的例子                                              | 符合2NF的例子                                                |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210131175041.png" style="zoom:67%;" /> | <img src="C:\Users\luffy\AppData\Roaming\Typora\draftsRecover\2021-1-31 2021-01-30-数据库完整性与设计 111519.assets\image-20210131181534300.png" alt="image-20210131181534300" style="zoom:67%;" /> |
+
+> 左表中，学号与课程名称，确定分数列；但学号，能够确定姓名、系名、系主任（即，后三者部分依赖于“学号-课程名称”）
+
+### 4.2.6 第三范式
+
+在满足第二范式的前提下，表中的每一列都直接依赖于主键，而不是通过其他列来间接依赖主键。
+
+简而言之，在满足2NF的基础上，任何非主列不得**传递函数依赖**于主键。
+
+| 不符合3NF的例子                                              | 符合3NF的例子                                                |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| <img src="C:\Users\luffy\AppData\Roaming\Typora\draftsRecover\2021-1-31 2021-01-30-数据库完整性与设计 111519.assets\image-20210131181534300.png" alt="image-20210131181534300" style="zoom:67%;" /> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210131184009.png" style="zoom:67%;" /> |
+
+> 右表中存在一定的传递函数依赖：学号$\rightarrow$系名$\rightarrow$系主任
+>
+> 数据添加的问题：仅从这两个表，无法实现 新增一个系与系主任。
+>
+> 数据删除的问题：如果删除第一列，相应地“经济系-张三丰”也不存在于两个表中了。
+
+## 4.3 数据库的备份和还原
+
+### 4.3.1 命令行方法
+
++ 备份：
+
+  ```shell
+  mysqldump -u用户名 -p密码 数据库名称 > 保存路径
+  ```
+
+  举例如下：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210201004944.png"/>
+
+  > 注意，盘符分隔符用`//`。
+  >
+  > 另外，建议用 CMD 而不是 PowerShell 去导出（出锅了）
+
+  此时，在E盘得到这个备份文件：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210201005130.png" style="zoom:67%;" />
+
++ 还原：
+
+  假如数据库`stu`被删掉，我们可以通过之前保存的`.sql`备份文件去还原：
+
+  1. 首先创建一个数据库并使用它：
+
+     ```sql
+     CREATE DATABASES db1;
+     USE DB1;
+     ```
+
+  2. 输入命令，将备份数据库还原到这个新库当中：
+
+     ```sql
+     SOURCE 路径;
+     ```
+
+     举例：
+
+     ```sql
+     SOURCE E://2333.sql;
+     ```
+
+### 4.3.2 图形化工具方法：
+
++ 备份：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210201010445.png" style="zoom:80%;" />
+
++ 还原：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210201010629.png"/>
 
