add content to SQL post & create a new post

--- a/_posts/数据库/2021-01-31-Error1045.md
+++ b/_posts/数据库/2021-01-31-Error1045.md
@@ -1,5 +1,5 @@
 ---
-title: 「MySQL8.0」ERROR 1045 (28000):Access denied for user 'ODBC'@'localhost'解决方案
+title: 「MySQL8.0」"ERROR 1045 (28000):Access denied for user 'ODBC'@'localhost'"之解决方案
 author: JoyDee
 categories: [DataBase, MySQL]
 tags: [MySQL]
@@ -9,7 +9,7 @@ math: true
 
 我的 Windows 装了`mysqld`后，登录 `MySQL` 时就出现了报错提示：🥴
 
-![image-20210131233405989](E:\J-StrawHat.github.io\_posts\数据库\2021-01-31-Error1045.assets\image-20210131233405989.png)
+![image-20210131233405989](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210131233405989.png)
 
 MySQL Workbench等其他软件也一样无法登录进我的数据库….
 
@@ -53,7 +53,7 @@ mysql -u用户名 -p
 接着，输入下列命令，以进入MySQL系统自带数据库mysql
 
 ```sql
-use mysql;
+USE mysql;
 /* Database changed */
 ```
 
