fix the bugs on some posts & add my custom domain

--- a/_posts/数据库/2021-01-30-数据库完整性与设计.md
+++ b/_posts/数据库/2021-01-30-数据库完整性与设计.md
@@ -312,7 +312,7 @@ CREATE TABLE SC (
 
 | 不符合2NF的例子                                              | 符合2NF的例子                                                |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210131175041.png" style="zoom:67%;" /> | <img src="C:\Users\luffy\AppData\Roaming\Typora\draftsRecover\2021-1-31 2021-01-30-数据库完整性与设计 111519.assets\image-20210131181534300.png" alt="image-20210131181534300" style="zoom:67%;" /> |
+| <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210131175041.png" style="zoom:67%;" /> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/image-20210131181534300.png" alt="image-20210131181534300" style="zoom:67%;" /> |
 
 > 左表中，学号与课程名称，确定分数列；但学号，能够确定姓名、系名、系主任（即，后三者部分依赖于“学号-课程名称”）
 
@@ -324,7 +324,7 @@ CREATE TABLE SC (
 
 | 不符合3NF的例子                                              | 符合3NF的例子                                                |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| <img src="C:\Users\luffy\AppData\Roaming\Typora\draftsRecover\2021-1-31 2021-01-30-数据库完整性与设计 111519.assets\image-20210131181534300.png" alt="image-20210131181534300" style="zoom:67%;" /> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210131184009.png" style="zoom:67%;" /> |
+| <img src="https://gitee.com/j__strawhat/MyImages/raw/master/image-20210131181534300.png" alt="image-20210131181534300" style="zoom:67%;" /> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210131184009.png" style="zoom:67%;" /> |
 
 > 右表中存在一定的传递函数依赖：学号$\rightarrow$系名$\rightarrow$系主任
 >
