--- a/_posts/数据库/2021-01-28-SQL.md
+++ b/_posts/数据库/2021-01-28-SQL.md
@@ -273,7 +273,7 @@ math: true
 
 ## 3.3 DML：增删改表中的数据
 
-一、添加数据
+### 3.3.1 添加数据
 
 ```sql
 INSERT INTO 表名(列名1, 列名2, ...) VALUES(值1, 值2, ...);
@@ -285,7 +285,7 @@ INSERT INTO 表名(列名1, 列名2, ...) VALUES(值1, 值2, ...);
 > 2. 除数字类型，其他类型需使用（单/双）引号引起来。
 > 3. 插入的数据大小应在列的规定范围内（如，不能将长度为80的字符串加入到长度为40的列）
 
-[ 附 ]：复制数据
+### 3.3.2 复制数据
 
 从 表1中的特定列的数据 复制到 表2中的特定列 中 。
 
@@ -308,7 +308,7 @@ INSERT INTO STU2(name) SELECT house FROM STU3;
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210129200829.png" style="zoom:80%;" />
 
-三、删除数据
+### 3.3.3 删除数据
 
 ```sql
 DELETE FROM 表名 WHERE 条件;
@@ -325,7 +325,7 @@ DELETE FROM 表名 WHERE 条件;
 >    TRUNCATE TABLE 表名; /* 推荐使用，它实际上是先删除表，然后再创建一个同名的表 */
 >    ```
 
-四、修改数据
+### 3.3.4 修改数据
 
 ```sql
 UPDATE 表名 SET 列名1 = 值1, 列名2 = 值2, .... WHERE 条件; /* 若不加条件，则会将表中所有记录全部修改 */
