commit the post about MySQL DCL & update the error solution of  MySQL

--- a/_posts/数据库/2021-01-31-Error1045.md
+++ b/_posts/数据库/2021-01-31-Error1045.md
@@ -17,6 +17,8 @@ MySQL Workbench等其他软件也一样无法登录进我的数据库….
 
 接下来就需要我们重置 自己设置的MySQL数据库密码了。
 
+> 我所装的 MySQL 版本号是8.0，其方法的差别在于第二点的SQL语句，已做区分。
+
 ## 一、设置跳过 MySQL 密码认证
 
 跳过密码认证，我们就能成功登陆 MySQL，然后利用SQL重新设置用户的密码。
