fix the post errors because of Typora

--- a/_posts/数据库/2021-01-28-SQL上.md
+++ b/_posts/数据库/2021-01-28-SQL上.md
@@ -1,5 +1,5 @@
 ---
-title: 「MySQL学习笔记03」关系数据库标准语言SQL
+title: 「MySQL学习笔记03」SQL（上）—— DDL、DML、DCL
 author: JoyDee
 categories: [DataBase, MySQL]
 tags: [MySQL]
