beautify the links & add verified file about Baidu

--- a/_posts/数据库/2021-01-28-SQL上.md
+++ b/_posts/数据库/2021-01-28-SQL上.md
@@ -1,5 +1,5 @@
 ---
-title: 「MySQL学习笔记03」SQL（上）—— DDL、DML、DCL
+title: 「MySQL学习笔记03」SQL（上）— DDL、DML、DCL
 author: JoyDee
 categories: [DataBase, MySQL]
 tags: [MySQL]
@@ -377,13 +377,13 @@ DROP USER '用户名'@'主机名';
 
 ### 3.4.4 root用户修改普通用户密码
 
-> 如果这位 需要修改密码 的用户，是刚刚创建的用户，没有权限的话，需为该用户 **授予权限**。否则，无法成功修改密码，会报错显示，无法找到该用户。
+> 如果这位 需要修改密码 的用户，是刚刚创建的，没有权限的话，需为该用户 **授予权限**。否则，无法成功修改密码，会报错显示，无法找到该用户。
 
 ```sql
 SET PASSWORD FOR '用户名'@'主机名' = PASSWORD('新密码');
 ```
 
-> 若要为 超级管理员 root 用户修改密码，请参阅我的这篇博文：「MySQL8.0」ERROR 1045 (28000):Access denied for user 'ODBC'@'localhost'解决方案：https://joydee.top/posts/Error1045/
+> 若要为 超级管理员 root 用户修改密码，请参阅我的这篇博文：[「MySQL8.0」ERROR 1045 (28000):Access denied for user 'ODBC'@'localhost'解决方案](https://joydee.top/posts/Error1045/)
 
 ### 3.4.5 为用户授权
 
