--- a/_posts/数据库/2021-01-31-Error1045.md
+++ b/_posts/数据库/2021-01-31-Error1045.md
@@ -7,7 +7,7 @@ date: 2021-01-31 23:31:35 +0800
 math: true
 ---
 
-我的 Windows 装了`mysqld`后，登录 `MySQL` 时就出现了报错提示：🥴
+我的 Windows 装了`mysqld`后，登录 `MySQL` 时就出现了报错提示：🤕
 
 ![image-20210131233405989](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210131233405989.png)
 
