--- a/_posts/数据库/2021-01-29-SQL下.md
+++ b/_posts/数据库/2021-01-29-SQL下.md
@@ -1,5 +1,5 @@
 ---
-title: 「MySQL学习笔记03」SQL（下）—— DQL
+title: 「MySQL学习笔记03」SQL（下）— DQL
 author: JoyDee
 categories: [DataBase, MySQL]
 tags: [MySQL]
