Fix the bug of MD of last post

--- a/_posts/Java/JavaSE/2021-02-04-Junit、反射、注解.md
+++ b/_posts/Java/JavaSE/2021-02-04-Junit、反射、注解.md
@@ -158,7 +158,7 @@ Java的反射（reflection）机制，是指在程序的运行状态中，可以
 
 此外，通过反射，我们能够解耦，提高程序的可扩展性。
 
-下面的`.java`文件、`.class`文件、`Class`类的关系图，源自[bravo1988的回答](学习java应该如何理解反射？ - bravo1988的回答 - 知乎 https://www.zhihu.com/question/24304289/answer/694344906)。
+下面的`.java`文件、`.class`文件、`Class`类的关系图，源自[bravo1988的回答]( https://www.zhihu.com/question/24304289/answer/694344906)。
 
 > `Class` 类对反射的支持写了内部类，里面的字段与 `.class` 文件的内容形成映射
 
