Modify the color of inline code

--- a/_posts/随笔杂谈与感悟/2021-01-25-2021年杂言碎语.md
+++ b/_posts/随笔杂谈与感悟/2021-01-25-2021年杂言碎语.md
@@ -9,13 +9,22 @@ math: true
 
 ## 二月
 
+### 02/02
+
+无奈Cloudfare速度不太快，而且希望百度能够收录这个博客，偶然间在谷歌上看到一篇关于[通过ZEIT (Vercel)享受免费CDN的心得](https://zpjiang.me/2020/01/15/let-baidu-index-github-page/)，于是试着将原本DNS为 Cloudfare 家的域名解析到 [ZEIT (Vercel)](https://vercel.com/j-strawhat) 家的DNS。
+
+怀着忐忑心理测了下速度，这速度飞跃看下图，Vercel yyds!
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210206131317.png"/>
+
+
 ### 02/01
 
 买到了自己的域名，解析挺顺利的。希望能够解决之前Github Page的偶尔抽风吧。
 
 既然有了域名，那就可以给GitHub Page套上CDN加速了。（没有服务器主机，备不了案呀
 
-现在明白谷歌搜索的优势了。通过谷歌，你才能够有机会访问到别人独立博客下的有质量文章（同时窥见那些36所的大佬）。尤其是遇到一些冷门技术问题时，你在CSDN和博客园下很少找到有效的解决方案，然而通过谷歌搜索，就能够找到方案。~~虽说不是马上就能解决~~
+现在明白谷歌搜索的优势了。通过谷歌，你才能够有机会访问到别人独立博客下的有质量文章（同时窥见那些名校的大佬）。尤其是遇到一些冷门技术问题时，你在CSDN和博客园下很少找到有效的解决方案，然而通过谷歌搜索，就能够找到方案。~~虽说不是马上就能解决~~
 
 ## 一月
 
