Finish the learning of JavaSE

--- a/_posts/Java/JavaSE/2021-02-04-Junit、反射、注解.md
+++ b/_posts/Java/JavaSE/2021-02-04-Junit、反射、注解.md
@@ -246,8 +246,6 @@ String className = personCls.getName();
 System.out.println(className); /* JoyDee.LearningReflection.Person */
 ```
 
-
-
 ## 16.4 成员变量、构造器、成员方法相关API
 
 `Field`：成员变量
@@ -256,7 +254,7 @@ System.out.println(className); /* JoyDee.LearningReflection.Person */
 
 + 获取值：`get(Object obj)`
 
-+ 忽略访问权限修饰符的安全检查：`成员变量.setAccessible(true)` 
++ 忽略访问权限修饰符的安全检查：`成员变量.setAccessible(true)` 
 
   ```java
   Person p = new Person();
@@ -292,15 +290,13 @@ System.out.println(className); /* JoyDee.LearningReflection.Person */
   eat_method.invoke(p, "饭"); //指向方法，传入 指定对象及方法参数列表
   ```
 
-+ 获取方法名称：`String getName()`
++ 获取方法名称：`String getName()`
 
 + 忽略访问权限修饰符的安全检查：
 
   ```java
   mymethod.setAccessible(true);
   ```
-
-
 
 ## 16.5 综合案例
 
@@ -316,19 +312,408 @@ System.out.println(className); /* JoyDee.LearningReflection.Person */
   1. 将需要创建的对象的全类名和需要执行的方法**定义在配置文件**中
   2. 在程序中加载读取配置文件
   3. 使用反射技术来加载类文件进内存
-  4. 创建对象
+  4. 创建实例对象
   5. 执行方法
 
-+ 代码：
+项目文件：
+
+`pro.properties` 配置文件：
+
+```
+className = JoyDee.LearningReflection.Person 
+methodName = eat
+```
+
+`Person.java` 文件：
+
+```java
+package JoyDee.LearningReflection;
+
+public class Person {
+    private int id;
+    private String name;
+    public Person() {
+    }
+    public Person(int id, String name) {
+        this.id = id;
+        this.name = name;
+    }
+    public void eat(){
+        System.out.println("I am EATING!!!");
+    }
+}
+```
+
+`ReflectDemo.java` 文件
+
+```java
+package JoyDee.LearningReflection;
+
+import java.io.InputStream;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
+import java.util.Properties;
+
+public class ReflectDemo {
+    public static void main(String[] args) throws Exception{
+        //1.1 创建属性集对象（可参看IO流章节）
+        Properties pro = new Properties();
+        //1.2 通过类加载器获取配置文件
+        ClassLoader clsRoader = ReflectDemo.class .getClassLoader();
+        InputStream is = clsRoader.getResourceAsStream("pro.properties"); //字节输入流
+        pro.load(is); //从字节输入流读入键值对
+
+        //2.获取配置文件中定义的数据
+        String className = pro.getProperty("className"); //通过键找到值
+        String methodName = pro.getProperty("methodName");
+
+        //3. 加载该类进内存
+        Class cls = Class.forName(className); //传入类名
+
+        //4. 创建实例对象
+        Constructor c = cls.getConstructor(); //获取空参构造器
+        Object obj = c.newInstance(); //执行该空参构造器来创建实例
+
+        //5.获取方法对象
+        Method method = cls.getMethod(methodName); //找到配置文件对应的方法名
+        method.invoke(obj); //需要传入“实例”对象
+    }
+}
+```
+
+
+
+# Chapter 17. 注解
+
+## 17.1 注解概述
+
+**Java注解** （Annotation）又称**Java标注**，是 Java 语言 5.0 版本开始支持加入源代码的特殊语法 元数据 。
+
+注解与类、接口、枚举是在同一个层次。它可以声明在包、类、字段、方法、局部变量、方法参数等的前面，用来对这些元素进行说明，注释。（注解，不是程序的一部分）
+
+和 Javadoc 不同，Java标注可以通过反射获取标注内容。在编译器生成类文件时，标注可以被嵌入到字节码中。Java虚拟机可以保留标注内容，在运行时可以获取到标注内容。 当然它也支持自定义Java标注。
+
+按照作用来分类：
+
++ 根据 Annotation 生成帮助文档：加上 `@Documente` 标签能使该 Annotation 标签的内容出现在 javadoc中；
+
++ 让编译器进行编译检查：例如 `@Override`
+
++ 代码分析：在反射中解析并使用 Annotation，或者，使用别人写的 测试类框架 对每个需要测试的方法加上诸如  `@Check`  的注解
+
+
+## 17.2 内置的注解
+
+`Annotation` 接口的架构：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/28123151-d471f82eb2bc4812b46cc5ff3e9e6b82.jpg" style="zoom: 50%;" />
+
+Java 定义了一套注解，共有 7 个，3 个在 `java.lang` 中，剩下 4 个在 `java.lang.annotation` 中。从 Java 7 开始，额外添加了新 3 个注解（本文暂不讨论）
+
+### 作用在代码的注释
+
++ `@Override`：检查该方法是否有覆写方法。若发现其父类或引用的接口中并没有该方法，则会报编译错误。
+
++ `@Deprecated`：标记过时的方法，若使用该方法，则会报编译警告
+
++ `@SuppressWarnings`：指示编译器去**忽略**注释中声明的警告。
 
   ```java
-  package JoyDee.LearningReflection;
-  
-  import java.lang.reflect.Constructor;
-  import java.lang.reflect.Field;
-  import java.lang.reflect.Method;
-  
-  
+  @SuppressWarnings("all")
+  /* 一般传递参数all */
   ```
 
-  
+### 作用在其他注解的注解（又称 元注解）
+
++ `@Retention`：标识这个注解如何保存，是只在代码中，还是编入 `.class` 文件中，或者是在运行时可通过**反射**访问。（缺省情况下，默认是 `RetentionPolicy.CLASS`）
+
+  可以选择：`SOURCE`、`CLASS`、**`RUNTIME	`**（一般而言，我们会取 `RUNTIME` 值）
+
+  ```java
+  @Retention(RetentionPolicy.RUNTIME)
+  /* 当前被描述的注解，会保留到class字节码文件中，并被JVM读取到 */
+  ```
+
++ `@Documented`：标记这些注解是否包含在用户API文档中。（缺省情况下不出现在 javadoc）
+
++ `@Target`：标记这个注解应该是哪种 Java 成员，它一般指定`Annotation`类型属性 `ElementType` 取值）：（缺省情况下可指定任何地方）
+
+  >  源码中，`Target` 类中有一成员，为枚举类数组`ElementType[]`，名称为 `value`
+
+  + `TYPE`：该注解只能作用在类上
+  + `METHOD`：该注解只能作用在方法上
+  + `FIELD`：该注解只能作用在成员变量上
+
+  ```java
+  @Target(value={ElementType.TYPE, ElementType.METHOD})
+  public @interface MyAnno3{
+      
+  }
+  ```
+
++ `@Inherited`：标记这个注解是继承于哪个注释类，一般指定 `Annotation` 的策略属性
+
+
+
+## 17.3 自定义注解
+
+一、通用格式：
+
+```java
+@元注解
+public @interface 注解名称{
+    //...
+}
+```
+
+> 通过反汇编得到其本质：
+>
+> ```java
+> public interface 注解名称 extends java.lang.annotation.Annotation{
+>     //...
+> }
+> ```
+
+二、举例：
+
++ 定义 自定义的注解类：
+
+  ```java
+  @Documented // 表示它可以出现在 javadoc 中。
+  @Target(ElementType.TYPE) //意味着MyAnnotation是来修饰"类、接口（包括注释类型）或枚举声明"的注解。
+  @Retention(RetentionPolicy.RUNTIME)  //编译器会将该Annotation信息保留在.class文件中，并且能被虚拟机读取。
+  public @interface MyAnnotation{
+      // Annotation 接口的实现细节都由编译器完成。
+      
+      public int age(); //定义抽象方法，它是这个注解的属性
+      public String() default "Luffy"; 
+      public MyAnno2 anno2(); //注解类型
+      public String[] strs();
+  }
+  ```
+
++ 使用自定义注解类：
+
+  ```java
+  @MyAnnotation(age = 20, anno2 = @MyAnno2, strs = {"Luffy", "Zoro"})
+  public class Worker{
+      
+  }
+  ```
+
+三、属性：接口中的抽象方法。其要求有：
+
++ 属性的返回值类型只能为：基本数据类型、`String`、枚举、注解、以上类型的数组
+
+  > 因而，属性的返回值不能是自定义的类
+
++ 一旦定义了属性，在**使用**时需给属性进行赋值
+
+  + 定义时如果用 `default`设置默认值，就无需再赋值（见上面的代码）
+
+  + 如果只有一个属性需要赋值，则只需要这样写即可：
+
+    ```java
+    @MyAnnotation(20)
+    public class Worker{
+        //...
+    }
+    ```
+
+
+
+## 17.4 解析注解
+
+在程序中使用（解析）注解，就是获取注解中定义的属性值。步骤如下：
+
+1. 获取你注解类 定义的 的 **类型对象**（如 `Class`、`Method`、`Field`）
+
+2. 调用 类型对象 的方法，来获取指定的 注解对象 ：
+
+   ```java
+   getAnnotation(Class) //其实就是在内存中生成了一个该注解接口的子类实现对象
+   ```
+
+3. 调用注解对象中的方法，来获取配置的属性值
+
+### 案例一
+
+现在通过注解的方式，简化 16.5 综合案例中 的简单框架配置
+
+`MyAnno.java` 文件：描述需要执行的类名、方法名
+
+```java
+package JoyDee.LearningReflection;
+
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+@Target({ElementType.TYPE})
+@Retention(RetentionPolicy.RUNTIME)
+public @interface MyAnno {
+    String className();
+    String methodName();
+}
+
+/**
+ * MyAnno a1 = refCls.getAnnotation(MyAnno.class);
+ * 其实就相当于给这个接口实现一个类:
+ * public class ProImpl implements Pro{
+ *     public String className(){
+ *         return "JoyDee.LearningReflection.Person";
+ *     }
+ *     public String methodName(){
+ *         return "eat";
+ *     }
+ * }
+ */
+```
+
+`Person.jva`文件：
+
+```java
+package JoyDee.LearningReflection;
+
+public class Person {
+    private int id;
+    private String name;
+    public Person() {
+    }
+    public Person(int id, String name) {
+        this.id = id;
+        this.name = name;
+    }
+    public void eat(){
+        System.out.println("I am EATING!!!");
+    }
+}
+```
+
+`ReflectDemo.java` 文件：框架类（无需属性集类、IO流类）
+
+```java
+package JoyDee.LearningReflection;
+
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
+
+@MyAnno(className = "JoyDee.LearningReflection.Person", methodName = "eat")
+public class ReflectDemo {
+    public static void main(String[] args) throws Exception{
+        // 一.解析注解
+        Class<ReflectDemo> refCls = ReflectDemo.class; //获取该类的字节码文件对象
+        MyAnno a = refCls.getAnnotation(MyAnno.class); //传入注解接口，得到实例对象
+        String className = a.className(); //由此得到注解上面写的"JoyDee.LearningReflection.Person"
+        String methodName = a.methodName(); //由此得到"eat"
+
+        //二. 就是之前所写的代码了
+        //3. 加载该类进内存
+        Class cls = Class.forName(className); //传入类名
+
+        //4. 创建实例对象
+        Constructor c = cls.getConstructor(); //获取空参构造器
+        Object obj = c.newInstance(); //执行该空参构造器来创建实例
+
+        //5.获取方法对象
+        Method method = cls.getMethod(methodName); //找到配置文件对应的方法名
+        method.invoke(obj); //需要传入“实例”对象
+    }
+}
+```
+
+### 案例二：设计测试框架
+
+`Calculator.java` 文件：
+
+```java
+package JoyDee.LearningReflection;
+
+public class Calculator {
+    @Check
+    public int addNums(){
+        return 1 + 1;
+    }
+
+    public int subNums(){
+        return 1 - 2;
+    }
+
+    @Check
+    public int mulNums(){
+        String str = null;
+        str.toString(); /* 此处作为错误演示 */
+        return 2 * 3;
+    }
+
+    @Check
+    public int divNums(){
+        return 3 / 0; /* 此处作为错误演示 */
+    }
+}
+```
+
+`TestCheck.java` 文件：
+
+```java
+package JoyDee.LearningReflection;
+
+import java.io.BufferedWriter;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.lang.reflect.Method;
+
+public class TestCheck {
+    public static void main(String[] args) throws IOException {
+        //创建计算器类的对象
+        Calculator cal = new Calculator();
+        //获取字节码文件对象
+        Class cls = cal.getClass();
+        //获取所有方法
+        Method[] methods = cls.getMethods();
+        int cnt = 0; //统计出现异常的次数
+        //将异常具体信息写入文件中
+        BufferedWriter bw = new BufferedWriter(new FileWriter("bug.txt"));
+        for (Method method : methods) {
+            if(method.isAnnotationPresent(Check.class)){
+                //判断方法上是否有Check注解，若有则检查异常
+                try {
+                    method.invoke(cal);
+                } catch (Exception e) {
+                    cnt ++;
+                    Throwable tmp = e.getCause();
+                    bw.write(method.getName()+ " 方法出异常了");
+                    bw.newLine();
+                    if(tmp != null) {
+                        //注意，要避免tmp是个null（我在教程视频中发现的错误）
+                        bw.write("异常的名称:"
+                                + tmp.getClass().getSimpleName() + "\n");
+                        bw.write("异常的原因:"
+                                + tmp.getMessage() + "\n");
+                    }
+                    bw.write("--------------------------\n");
+                }
+            }
+        }
+        bw.write("本次测试一共出现了 " + cnt + " 次的异常");
+        bw.flush();
+        bw.close();
+    }
+}
+```
+
+运行结果：写入了`bug.txt`文件中：
+
+```
+mulNums 方法出异常了
+异常的名称:NullPointerException
+异常的原因:Cannot invoke "String.toString()" because "str" is null
+--------------------------
+divNums 方法出异常了
+异常的名称:ArithmeticException
+异常的原因:/ by zero
+--------------------------
+本次测试一共出现了 2 次的异常
+```
+
