Upload the post about JDBC

--- a/_posts/数据库/2021-01-30-数据库完整性与设计.md
+++ b/_posts/数据库/2021-01-30-数据库完整性与设计.md
@@ -81,12 +81,12 @@ ALTER TABLE 表名 DROP PRIMARY KEY;
 
   ```sql
   CREATE TABLE stu(
-  	id INT PRIMARY KET AUTO_INCREMENT,
+  	  id INT PRIMARY KET AUTO_INCREMENT,
       name VARCHAR(20)
   );
   
   CREATE TABLE STB(
-  	id INT PRIMARY KEY AUTO_INCREMENT,
+  	  id INT PRIMARY KEY AUTO_INCREMENT,
       name VARCHAR(20)
   ) AUTO_INCREMENT=起始值;
   ```
@@ -115,7 +115,7 @@ ALTER TABLE 表名 DROP PRIMARY KEY;
 
   ```sql
   CREATE TABLE stu(
-  	id INT,
+  	  id INT,
       name VARCHAR(20) NOT NULL /* name 不允许为空 */
   );
   ```
@@ -137,10 +137,10 @@ ALTER TABLE 表名 DROP PRIMARY KEY;
 + 创建表的同时设置默认值。举例使用如下：
 
   ```sql
-  CREATE TABLE st2(
-  	  id INT,
-      name VARCHAR(20),
-      address VARCHAR(20) DEFAULT `广州`
+  CREATE TABLE stu(
+    id INT PRIMARY KEY AUTO_INCREMENT,
+    NAME VARCHAR(20),
+    address VARCHAR(20) DEFAULT "Guangzhou" /* 这里建议使用英文（中文似乎出锅） */
   );
   ```
 
@@ -246,15 +246,15 @@ ALTER TABLE 表名 DROP PRIMARY KEY;
 
 ```sql
 CREATE TABLE SC ( 
-	  SNo CHAR(9), /* 学生成绩表的主属性*/
+    SNo CHAR(9), /* 学生成绩表的主属性*/
     CNo CHAR(4), /* 学生表的主属性的外键 */
     Grade SMALLINT,
     PRIMARY KEY(SNo, CNo), /* 在表级定义实体完整性（设置联合主键）*/
     FOREIGN KEY (SNo) REFERENCES Student(SNo) /* 注意区别两个SNo*/
-			      ON DELETE CASCADE /*当删除Student表中的元组时，级联删除SC中相应元组 */
+            ON DELETE CASCADE /*当删除Student表中的元组时，级联删除SC中相应元组 */
             ON UPDATE CASCADE, /*当更新Student表中的SNo时，...*/
-	  FOREIGN KEY (CNo) REFERENCES Course(CNo) 
-			      ON DELETE CASCADE /*当删除Course表中的元组造成与SC表不一致时，拒绝删除*/
+    FOREIGN KEY (CNo) REFERENCES Course(CNo) 
+            ON DELETE CASCADE /*当删除Course表中的元组造成与SC表不一致时，拒绝删除*/
             ON UPDATE CASCADE /*当更新Course表中的CNo时，级联更新SC表中相应的元组*/
 );
 ```
